--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "bootstrap": "^4.3.1",
+    "bootswatch": "^4.3.1",
     "firebase": "^7.15.5",
     "rxjs": "~6.5.4",
     "tslib": "^1.13.0",
